# car-price-prediction

./: Data Preparation.ipynb  Dataset Demo 1.ipynb  EDA.ipynb  Model 1.ipynb  Model 2.ipynb  README.md  Untitled.ipynb  cross_validation_model_comparison.ipynb  golf-dataset.ipynb  multivariate_analysis_model_1_linear_regression.ipynb  multivariate_analysis_opel_astra.ipynb  multivariate_analysis_opel_corsa.ipynb  multivariate_analysis_vw_golf.ipynb  pyproject.toml
.ipynb_checkpoints/: Data Preparation-checkpoint.ipynb  Dataset Demo 1-checkpoint.ipynb
data/: cleaned_opel_astra.csv  cleaned_opel_corsa.csv  cv_results_vw_golf.csv  cv_results_vw_golf_summary.csv  golf-dataset.csv  model_metrics.csv  transformed_cleaned_opel_astra.csv  transformed_cleaned_opel_corsa.csv  transformed_cleaned_vw_golf.csv  transformed_cleaned_vw_golf_no_wucher.csv
scripts/: car_price_pipeline.py
